--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "pg": "^7.3.0",
+    "pg-promise": "^7.0.1",
     "serve-favicon": "~2.4.2"
   }
 }
